<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    tools:context=".AddAccountActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/add_account" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/txt_student_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/student_photo"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@id/app_bar"
        app:layout_constraintStart_toStartOf="@id/app_bar"
        app:layout_constraintTop_toBottomOf="@id/app_bar" />

    <ImageView
        android:id="@+id/img_add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_student_photo"
        app:layout_constraintEnd_toEndOf="@id/txt_student_photo"
        app:layout_constraintStart_toStartOf="@id/txt_student_photo"
        app:layout_constraintTop_toBottomOf="@id/txt_student_photo" />

    <TextView
        android:id="@+id/txt_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/study_account"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_add_photo" />

    <LinearLayout
        android:id="@+id/linear_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background_linear"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        android:paddingTop="10dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_account"
        tools:ignore="ButtonStyle">

        <Button
            android:id="@+id/btn_student"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/student"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_college"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/college"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_select_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@android:color/white"
        android:fontFamily="@font/poppins"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/select_account_type"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/txt_account"
        app:layout_constraintTop_toBottomOf="@id/txt_account" />

    <LinearLayout
        android:id="@+id/linear_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/background_linear"
        android:paddingStart="5dp"
        android:paddingTop="10dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="@id/linear_type"
        app:layout_constraintStart_toStartOf="@id/linear_type"
        app:layout_constraintTop_toBottomOf="@id/linear_type">

        <EditText
            android:id="@+id/edt_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="null"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/full_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="5dp"
            android:textSize="13sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/white"
        android:fontFamily="@font/poppins"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/full_name"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/linear_type"
        app:layout_constraintTop_toBottomOf="@id/linear_type" />

    <LinearLayout
        android:id="@+id/linear_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/background_linear"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        android:paddingTop="10dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="@id/linear_name"
        app:layout_constraintStart_toStartOf="@id/linear_name"
        app:layout_constraintTop_toBottomOf="@id/linear_name">

        <TextView
            android:id="@+id/txt_extension"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@android:color/white"
            android:fontFamily="@font/poppins"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/_62"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="null"
            android:digits="0123456789"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/dummy_number"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:padding="5dp"
            android:textSize="13sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/white"
        android:fontFamily="@font/poppins"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/phone_number"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/linear_name"
        app:layout_constraintTop_toBottomOf="@id/linear_name" />

    <LinearLayout
        android:id="@+id/linear_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/background_linear"
        android:paddingStart="5dp"
        android:paddingTop="10dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="@id/linear_phone"
        app:layout_constraintStart_toStartOf="@id/linear_phone"
        app:layout_constraintTop_toBottomOf="@id/linear_phone">

        <EditText
            android:id="@+id/edt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="null"
            android:drawableEnd="@drawable/ic_maps"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/full_address"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="5dp"
            android:textSize="13sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/white"
        android:fontFamily="@font/poppins"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/address"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/linear_phone"
        app:layout_constraintTop_toBottomOf="@id/linear_phone" />

    <ImageView
        android:id="@+id/img_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/button_welcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/next"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@id/img_button"
        app:layout_constraintEnd_toStartOf="@id/img_button"
        app:layout_constraintTop_toTopOf="@id/img_button" />
</androidx.constraintlayout.widget.ConstraintLayout>