<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity">

    <ImageView
        android:id="@+id/img_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_selectaccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_title_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/select_account"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/img_account"
        app:layout_constraintStart_toStartOf="@id/img_account"
        app:layout_constraintTop_toBottomOf="@id/img_account" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title_account">

        <EditText
            android:id="@+id/edt_search"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/background_search"
            android:fontFamily="@font/poppins"
            android:hint="@string/search_student"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="5dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_warning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/background_warning"
        android:fontFamily="@font/montserrat"
        android:paddingStart="30dp"
        android:paddingTop="12dp"
        android:paddingEnd="30dp"
        android:paddingBottom="12dp"
        android:text="@string/warning_desc"
        android:textColor="#616161"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/input_search"
        app:layout_constraintStart_toStartOf="@id/input_search"
        app:layout_constraintTop_toBottomOf="@id/input_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_account"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/txt_add_account"
        app:layout_constraintEnd_toEndOf="@id/txt_warning"
        app:layout_constraintStart_toStartOf="@id/txt_warning"
        app:layout_constraintTop_toBottomOf="@id/txt_warning" />

    <TextView
        android:id="@+id/txt_add_account"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/ic_button_sign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_button_add_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_add_circle"
        android:drawablePadding="10dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/account_study"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/txt_add_account"
        app:layout_constraintEnd_toEndOf="@id/txt_add_account"
        app:layout_constraintStart_toStartOf="@id/txt_add_account"
        app:layout_constraintTop_toTopOf="@id/txt_add_account" />

</androidx.constraintlayout.widget.ConstraintLayout>