<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:padding="20dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/img_forget_password"
                android:layout_width="138dp"
                android:layout_height="138dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_reload_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_title_forget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/title_forget"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/img_forget_password"
                app:layout_constraintStart_toStartOf="@id/img_forget_password"
                app:layout_constraintTop_toBottomOf="@id/img_forget_password" />

            <TextView
                android:id="@+id/txt_desc_forget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/desc_forget"
                android:textAlignment="center"
                android:textSize="14sp"
                android:layout_marginTop="18dp"
                app:layout_constraintEnd_toEndOf="@id/txt_title_forget"
                app:layout_constraintStart_toStartOf="@id/txt_title_forget"
                app:layout_constraintTop_toBottomOf="@id/txt_title_forget" />

            <ImageView
                android:id="@+id/img_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/button_welcome"
                app:layout_constraintEnd_toEndOf="@id/txt_desc_forget"
                app:layout_constraintTop_toBottomOf="@id/txt_desc_forget" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/done"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="@id/img_done"
                app:layout_constraintEnd_toStartOf="@id/img_done"
                app:layout_constraintTop_toTopOf="@id/img_done" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
